// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sets a complex variable in an if check 1`] = `
.c0 {
  cursor: if(,not-allowed);
}

<div
  className="c0"
/>
`;

exports[`Sets a complex variable in an if check 2`] = `
.c0 {
  cursor: if(true,not-allowed);
}

<div
  className="c0"
  disabled={true}
/>
`;
